--- a/public/configs/image_sample.yaml
+++ b/public/configs/image_sample.yaml
@@ -1,30 +1,30 @@
 model:
-  image_size: 64
+  image_size: 128
   num_channels: 128
   num_res_blocks: 2
   num_heads: 4
   num_heads_upsample: -1
+  attention_resolutions: "32,16,8"
   learn_sigma: False
   class_cond: False
   use_checkpoint: False
-  attention_resolutions: "16,8"
   use_scale_shift_norm: True
   dropout: 0.1
 
 diffusion:
   steps: 1000
-  learn_sigma: true
+  learn_sigma: False
   sigma_small: False
   noise_schedule: "linear"
   use_kl: False
   predict_xstart: False
   rescale_timesteps: True
-  rescale_learned_sigmas: True
+  rescale_learned_sigmas: False
   timestep_respacing: ""
 
 sampling:
   clip_denoised: True
-  num_samples: 10000
+  num_samples: 16
   batch_size: 16
   use_ddim: False
-  model_path: ""
+  model_path: "output\\01_model\\idm-train003\\model010000.pt"
