--- a/public/configs/image_train.yaml
+++ b/public/configs/image_train.yaml
@@ -1,38 +1,38 @@
 model:
-  image_size: 64
+  image_size: 128
   num_channels: 128
   num_res_blocks: 2
   num_heads: 4
   num_heads_upsample: -1
-  attention_resolutions: "16,8"
-  learn_sigma: False
+  attention_resolutions: "32,16,8"
+  learn_sigma: False # 两个 learn_sigma 必须同时改
   class_cond: False
   use_checkpoint: False
-  use_scale_shift_norm: True
+  use_scale_shift_norm: False
   dropout: 0.1
 
 diffusion:
   steps: 1000
-  learn_sigma: true
+  learn_sigma: False
   sigma_small: False
-  noise_schedule: "linear"
+  noise_schedule: "cosine"
   use_kl: False
   predict_xstart: False
-  rescale_timesteps: True # 只能在 linear noise 时为 true
-  rescale_learned_sigmas: True
+  rescale_timesteps: False # 只能在 linear noise 时为 true
+  rescale_learned_sigmas: False
   timestep_respacing: ""
 
 training:
-  data_dir: ""
-  schedule_sampler: "uniform"
-  lr: 1e-4
+  data_dir: "D:\\CodeReproduction\\afhq_v2\\train"
+  schedule_sampler: "loss-second-moment"
+  lr: 1.0e-4
   weight_decay: 0.0
-  lr_anneal_steps: 0
+  lr_anneal_steps: 10000
   batch_size: 32
-  microbatch: -1
+  microbatch: 16
   ema_rate: "0.9999"
-  log_interval: 10
-  save_interval: 10000
+  log_interval: 20
+  save_interval: 2000
   resume_checkpoint: ""
-  use_fp16: False
-  fp16_scale_growth: 1e-3
+  use_fp16: True
+  fp16_scale_growth: 1.0e-3
